Archive2/c7/800f49ba5aac43/output
main.cpp: In function 'int main()':
main.cpp:14:35: error: aggregate 'A<std::array<int, 10ul>, double> a' has incomplete type and cannot be defined
   A< std::array<int,10>, double>  a;
                                   ^
